--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { width:100%; padding:.5rem; background:#f0f0f030; font-size: 11px; text-align: center; }
+    .attribution { padding:.5rem 0; border-radius:.5rem; background:#f0f0f030; font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
