--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { padding:.5rem 0; border-radius:.5rem; background:#f0f0f030; font-size: 11px; text-align: center; }
+    .attribution { padding:.5rem 1rem; border-radius:.5rem; background:#f0f0f030; font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
@@ -23,7 +23,7 @@
       <img src="./images/image-victor.jpg"/>
     </div>
     <div class="header">
-      <h1 id="name">Victor Crest <span id="age">26</span></h1>
+      <h1 id="name">Victor Crest <span id="age"> 26</span></h1>
       <h2 id="city">London</h2>
     </div>
     <div class="info">
