--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
   <div class="card">
     <div class="cover"></div>
     <div class="profile">
-      <img src="./images/image-victor.jpg"/>
+      <img src="./images/image-victor.jpg" alt="profile-image"/>
     </div>
     <div class="header">
-      <h1 id="name">Victor Crest <span id="age"> 26</span></h1>
+      <h1 id="name">Victor Crest <span id="age">&nbsp;&nbsp;26</span></h1>
       <h2 id="city">London</h2>
     </div>
     <div class="info">
-      <div name="Followers" value="80K"></div>
-      <div name="Likes" value="803K"></div>
-      <div name="Photos" value="1.4K"></div>
+      <div name_="Followers" value_="80K"></div>
+      <div name_="Likes" value_="803K"></div>
+      <div name_="Photos" value_="1.4K"></div>
     </div>
   </div>
   <div class="attribution">
