--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <h2 id="city">London</h2>
     </div>
     <div class="info">
-      <div t="Followers" v="80K"></div>
-      <div t="Likes" v="803K"></div>
-      <div t="Photos" v="1.4K"></div>
+      <div class="item" id="item" t="Followers" v="80K"></div>
+      <div class="item" id="item" t="Likes" v="803K"></div>
+      <div class="item" id="item" t="Photos" v="1.4K"></div>
     </div>
   </div>
   <div class="attribution">
