--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </style>
 </head>
 <body>
-  <div class="card">
+  <main class="card">
     <div class="cover"></div>
     <div class="profile">
       <img src="./images/image-victor.jpg" alt="profile-image"/>
@@ -31,7 +31,7 @@
       <div class="item" t="Likes" v="803K"></div>
       <div class="item" t="Photos" v="1.4K"></div>
     </div>
-  </div>
+  </main>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://www.fiverr.com/zak00aria">zak00aria</a>.
