--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
       <div class="item" t="Photos" v="1.4K"></div>
     </div>
   </main>
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://www.fiverr.com/zak00aria">zak00aria</a>.
-  </div>
+  </footer>
 </body>
 </html>
