--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
       <h2 id="city">London</h2>
     </div>
     <div class="info">
-      <div class="item" t="Followers" v="80K"></div>
-      <div class="item" t="Likes" v="803K"></div>
-      <div class="item" t="Photos" v="1.4K"></div>
+      <div class="item" name="Followers"><span>80K</span></div>
+      <div class="item" name="Likes"><span>803K</span></div>
+      <div class="item" name="Photos"><span>1.4K</span></div>
     </div>
   </main>
   <footer class="attribution">
